# FlappyKite

./: .bazelrc  .gitignore  BUILD.bazel  Config.xcconfig.template  Gemfile  MODULE.bazel  Package.resolved  Package.swift  Podfile  README.md  swift_deps_index.json
.buildkite/: docker-compose.yml  pipeline.yml
.buildkite/scripts/: build-signed.sh  build.sh  install-dependencies.sh  screenshots.sh  test.sh
.github/: dependabot.yml
FlappyKite/: BUILD.bazel  ContentView.swift  FlappyKite.entitlements  FlappyKiteApp.swift  Info.plist  Item.swift  LaunchScreen.storyboard
FlappyKite.xcodeproj/: project.pbxproj
FlappyKite.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
FlappyKite/Assets.xcassets/LaunchScreenBackgroundColor.colorset/: Contents.json
FlappyKite/Assets.xcassets/LaunchScreenImage.imageset/: Contents.json
FlappyKiteTests/: BUILD.bazel  FlappyKiteTests.swift
FlappyKiteUITests/: BUILD.bazel  FlappyKiteUITests.swift  FlappyKiteUITestsLaunchTests.swift  SnapshotHelper.swift
fastlane/: Fastfile  Snapfile
