load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_update_packages")

gazelle_binary(name = "gazelle_bin", languages = ["@rules_swift_package_manager//gazelle"])

swift_update_packages(name = "swift_update_packages", gazelle = ":gazelle_bin", generate_swift_deps_for_workspace = False, update_bzlmod_stanzas = True)

gazelle(name = "update_build_files", gazelle = ":gazelle_bin")
