bazel_dep(name = "apple_support", version = "1.22.1")
bazel_dep(name = "rules_swift", version = "2.4.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "4.0.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_swift_package_manager", version = "0.43.0")
bazel_dep(name = "gazelle", version = "0.40.0")

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_sentry_cocoa",
)
# swift_deps END
