load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

ios_unit_test(
    name = "FlappyKiteTests",
    bundle_id = "com.buildkite.FlappyKiteTests",
    minimum_os_version = "17.0",
    test_host = "//FlappyKite:FlappyKite",
    deps = [":FlappyKiteTests.library"],
)

swift_library(
    name = "FlappyKiteTests.library",
    testonly = True,
    srcs = glob(["**/*.swift"]),
    module_name = "FlappyKiteTests",
    deps = ["//FlappyKite:FlappyKite.library"],
)
